--- a/Lab9/pruebaCarrusel.css
+++ b/Lab9/pruebaCarrusel.css
@@ -8,7 +8,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 5rem;
+  padding-top: 3rem;
+}
+.wraper2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 3rem;
+  padding-bottom: 2rem;
 }
 
 .btn-redondo {
@@ -52,7 +59,6 @@
   position: absolute;
   top: 0;
   width: 300px;
-  background-color: gainsboro;
 }
 
 .poster {
@@ -73,6 +79,7 @@
   font-size: 16pt;
   margin-top: 3px;
   margin-left: 7px;
+  color: white;
 }
 
 .bx-star-rellena {
@@ -87,12 +94,24 @@
   justify-content: space-between;
   width: 100%;
   height: 10%;
-  background-color: rgb(198, 142, 58);
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.rating-box-banner {
+  display: flex;
+
+  bottom: 0;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  height: 10%;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .estrellas {
   display: flex;
-  /* width: 90%; */
 }
 
 .txtr {
@@ -102,7 +121,6 @@
 }
 
 .favoritos {
-  /* width: 10%; */
   display: flex;
   justify-content: center;
   margin-right: 16px;
