--- a/Lab9/style.css
+++ b/Lab9/style.css
@@ -1,76 +1,3 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-.roll {
-  display: flex;
-  overflow-x: auto;
-  overflow-y: hidden;
-  width: 100%;
-}
-
-.tarjeta {
-  /* height: 400px; */
-  width: 300px;
-  margin: 5px 0 5px 30px;
-  flex-shrink: 0;
-  background-color: gainsboro;
-}
-
-.poster {
-  width: 300px;
-  height: 450px;
-  border-radius: 20px;
-}
-
-.bxs-user-pin {
-  font-size: 20pt;
-  margin-top: 25px;
-  margin-left: 30px;
-  color: white;
-}
-
-.bx-star-tamano {
-  font-size: 16pt;
-  margin-top: 3px;
-  margin-left: 7px;
-}
-
-.bx-star-rellena {
-  color: yellow;
-}
-
-.rating-box {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 100%;
-  height: 10%;
-  background-color: rgb(198, 142, 58);
-}
-
-.estrellas {
-  display: flex;
-  /* width: 90%; */
-}
-
-.txtr {
-  color: white;
-  font-size: 20px;
-  margin: 4px 8px;
-}
-
-.favoritos {
-  /* width: 10%; */
-  display: flex;
-  justify-content: center;
-  margin-right: 16px;
-}
-
-/* Para borrar */
-
 .prueba-rating {
   width: 350px;
 }
@@ -87,6 +14,7 @@
   background: linear-gradient(to bottom, #1f1f1f 10%, #ffffff00 100%);
   width: 100%;
   height: 80px;
+  z-index: 100;
 }
 .infopeli {
   display: flex;
@@ -140,14 +68,7 @@
 .icon {
   font-size: 30px;
 }
-.fondo-gris {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 70rem;
-  width: 100%;
-  background-color: rgb(46, 46, 46);
-}
+
 .pelis {
   display: flex;
   flex-direction: column;
@@ -186,4 +107,9 @@
 .fin-txt {
   color: white;
   font-size: 15pt;
+}
+.fondo-gris-nuevo {
+  background-color: rgb(52, 52, 52);
+  width: 100%;
+  height: 100%;
 }
